<resources>
    <string name="app_name">VineYardManager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="location">Location</string>
    <string name="works">Works</string>
    <string name="employee">Employee</string>
    <string name="settings">Settings</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="contact_image">Contact image</string>
    <string name="phone">phone</string>
    <string name="mail">mail</string>
    <string name="action">action</string>
    <string name="winelotname">vineyardname</string>
    <string name="deadline">deadline</string>
    <string name="workername">workername</string>
    <string name="title_activity_main">Vineyard Manager</string>
    <string name="wine_variety">Vine variety</string>
    <string name="vines">vines</string>
    <string name="square_meters">square meters</string>
    <string name="work_details">Work details</string>
    <string name="Lastname">Lastname</string>
    <string name="Firstname">Firstname</string>
    <string name="Phone">Phone</string>
    <string name="Mail">Mail</string>
    <string name="Action">Action</string>
    <string name="Deadline">Deadline</string>
    <string name="vineyard_name">Vineyard name</string>
    <string name="number_of_stock">Number of stocks</string>
    <string name="Square_meters">Surface</string>
    <string name="Orientation">Orientation</string>
    <string name="south">South</string>
    <string name="east">East</string>
    <string name="west">West</string>
    <string name="north">North</string>
    <string name="icon">Icon</string>
    <string name="manage">Manage</string>
    <string name="vineyard_manager">Vineyard Manager</string>
    <string name="modify">Modify</string>
    <string name="add_new_variety">Add new vine variety</string>
    <string name="add_new_worker">Add new employee</string>
    <string name="edit">Edit</string>
    <string name="add_new_vine_lot">Add new vineyard</string>
    <string name="add_new_job">Add new work</string>
    <string name="job_to_do">Job to do</string>
    <string name="select_the_deadline">Select the deadline</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="lastname_empty">Please enter the lastname</string>
    <string name="firstname_empty">Please enter the firstname</string>
    <string name="location_name_empty">Please enter the location name</string>
    <string name="stocks_empty">Please enter a number of stocks</string>
    <string name="surface_empty">Please enter a surface</string>
    <string name="vine_variety_empty">Please enter a vine variety</string>
    <string name="action_empty">Please enter an action</string>
    <string name="deadline_empty">Please enter a deadline</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Map</string>
    <string name="get_user_location">Get user location</string>
    <string name="edit_worker">Edit worker</string>
    <string name="fistname_empty">Please enter the firstname</string>
    <string name="phone_not_valid">Please enter phone number</string>
    <string name="action_settings">Settings</string>
    <string name="add_new_vinelot">Add new vineyard</string>
    <string name="language_german">Deutsch</string>
    <string name="language_french">Français</string>
    <string name="language_english">English</string>
    <string name="willkommen">Willkommen</string>
    <string name="bienvenue">Bienvenue</string>
    <string name="welcome">Welcome</string>
    <string name="language_italian">Italiano</string>
    <string name="benvenuto">Benvenuto</string>
    <string name="in_order_to_get_the_localisation_click_the_button_above">In order to get the localisation, click the button above</string>
    <string name="title_activity_map">Map</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="user_location">User location</string>
    <string name="user_position_unknown">User position unknown</string>
    <string name="you_have_no_winelot">You have no wineyard registered</string>
    <string name="no_email_client">There are no email clients installed.</string>
    <string name="no_details">There is no details</string>
    <string name="create_a_worker">Create a worker before creating a location!</string>
    <string name="create_a_winelot">Create a wine lot before creating a location!</string>
    <string name="create_a_vinevariety">Create a vine variety before creating a location!</string>
    <string name="about">WineYardManager is developed by Flavien Bonvin and Luca Centofanti, for the lecture 644-1 in HEVS</string>
    <string name="about_us">About us</string>

    <string name="title_activity_sync">ActivitySync</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="sync">Force synchronisation</string>
</resources>
