<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/map"
            android:checkable="false"/>
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_menu_place"
            android:title="@string/location"
            android:checked="true"/>
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_menu_work"
            android:title="@string/works" />
        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/ic_menu_people"
            android:title="@string/employee" />
    </group>

    <item android:title="@string/manage">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_vine_variety"
                    android:icon="@drawable/ic_grapes"
                    android:title="@string/wine_variety"/>
                <item
                    android:id="@+id/nav_manage_orientation"
                    android:icon="@drawable/ic_orientation"
                    android:title="@string/Orientation"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/miscellaneous">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_setting"
                    android:icon="@drawable/ic_menu_setting"
                    android:title="@string/settings" />
            </group>
        </menu>
    </item>
</menu>